syntax = "proto3";

package mdfs.datanode;

option java_package = "io.github.belugabehr.mdfs.datanode";

import "google/protobuf/any.proto";

message LocalMBlock {
  string location = 1;
  google.protobuf.Any block_details = 2;
}
